Makefile added; post-print style adjustments

--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -124,7 +124,7 @@
 \begin{table}[!h]
   \centering
   \caption{Eigenschaften von Aluminiumoxid}
-  \evenrowcolors
+  \oddrowcolors
   \begin{tabularx}{\textwidth}{|XXR|}
     \hline
     \textbf{Größe}                                         & \textbf{Wert}                            & \textbf{Referenz}                   \\
