--- a/datastructures.tex
+++ b/datastructures.tex
@@ -159,7 +159,7 @@ Dabei sind Anwendungen auf auch periodische und teilperiodische Räume möglich.
     \def\svgwidth{\textwidth}
     \begin{subfigure}[t]{\subwidth}
       \includegraphics[width=\textwidth]{delaunay-alpha-a}
-      \subcaption{Delaunay Triangulation einer beliebigen Punktmenge}
+      \subcaption{Delaunay-Triangulation einer beliebigen Punktmenge}
       \label{fig:delaunay-alpha-a}
     \end{subfigure}
     \hfill
