--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -3,8 +3,9 @@
 %% document-wide settings %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \testonlytrue
+\paperonlytrue
 %% \colortblfixfalse
-%% \paperonlytrue
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[
 %% draft,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
