--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -3,7 +3,7 @@
 %% document-wide settings %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \testonlytrue
-\paperonlytrue
+%% \paperonlytrue
 %% \colortblfixfalse
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[
