the real final version

--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,10 +1,11 @@
-\include{presettings}
+\include{preamble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% document-wide settings %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \testonlytrue
 %% \paperonlytrue
-%% \colortblfixfalse
+\colortblfixfalse
+\rowcolorsfalse
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[
 %% draft,
