probably the last commit. PDF files added.

--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,15 +1,15 @@
-\include{preamble}
+\input{preamble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% document-wide settings %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \testonlytrue
 %% \paperonlytrue
-\colortblfixfalse
-\rowcolorsfalse
+%% \colortblfixfalse
+%% \rowcolorsfalse
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \documentclass[
 %% draft,
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 fontsize=11pt,
 a4paper,
 twoside,
